--- a/meltano.yml
+++ b/meltano.yml
@@ -18,16 +18,11 @@ plugins:
     - about
     - stream-maps
 
-    # TODO: Declare settings and their types here:
     settings:
-    - name: username
-      label: Username
-      description: The username to use for authentication
-
     - name: password
       kind: password
       label: Password
-      description: The password to use for authentication
+      description: Polygon API Key
       sensitive: true
 
     - name: start_date
@@ -35,13 +30,9 @@ plugins:
       label: Start Date
       description: Initial date to start extracting data from
 
-    # TODO: Declare required settings here:
-    settings_group_validation:
-    - [username, password]
-
-    # TODO: Declare default configuration values here:
     config:
-      start_date: '2010-01-01T00:00:00Z'
+      start_date: '2020-01-01T00:00:00Z'
+      api_key: ${POLYGON_API_KEY}
 
   loaders:
   - name: target-jsonl
