--- a/meltano.yml
+++ b/meltano.yml
@@ -37,10 +37,18 @@ plugins:
     - ticker_types.*
     - related_companies.*
     - custom_bars.*
+    - daily_market_summary.*
+    - daily_ticker_summary.*
+    - top_market_movers.*
+    - trades.*
 
     config:
       start_date: '2020-01-01T00:00:00Z'
       api_key: ${POLYGON_API_KEY}
+
+      # The tickers that are set here persist across all streams that require a single stock ticker as input.
+      # To run different tickers across different streams you need to call the tap N times,
+      # where N is the number of distinct groups of ticker.
       stock_tickers:
         - AAPL
         - MSFT
@@ -49,10 +57,35 @@ plugins:
             multiplier: 1
             timespan: "second"
             from_: "2023-01-05"
-            to: "2023-01-07"
+            to: "2023-01-06"
             adjusted: true
             sort: "asc"
             limit: 100
+      daily_market_summary:
+        - params:
+            date: "2025-01-06"  # leave blank or set to "" to get current day
+            adjusted: true
+            include_otc: true
+      daily_ticker_summary:
+        - params:
+            date: "2025-01-06"  # leave blank or set to "" to get current day
+            adjusted: true
+      top_market_movers:
+        - params:
+            direction: "gainers"  # set to "" or "both" to get both directions
+            include_otc: false
+      trades:
+        - params:
+            timestamp_gte: "2025-05-19T12:56:00Z"
+            order: asc
+            tickers:
+              - AAPL
+              - META
+    metadata:
+      trades:
+        replication-method: INCREMENTAL
+        replication-key: participant_timestamp
+
 
   loaders:
   - name: target-jsonl
