--- a/meltano.yml
+++ b/meltano.yml
@@ -68,13 +68,17 @@ plugins:
       # To run different tickers across different streams you need to call the tap N times,
       # where N is the number of distinct groups of ticker.
       stock_tickers:
-        - AAPL
+        tickers:
+          - AAPL
+          - MSFT
+        query_params:
+          - sort: ticker
       custom_bars:
         - params:
             multiplier: 1
             timespan: "second"
             from: "2023-01-05"
-            to: "2023-01-06"
+            to: "2023-01-09"
             adjusted: true
             sort: "asc"
             limit: 50000
