--- a/meltano.yml
+++ b/meltano.yml
@@ -68,17 +68,18 @@ plugins:
       # To run different tickers across different streams you need to call the tap N times,
       # where N is the number of distinct groups of ticker.
       stock_tickers:
+        query_params:
+          sort: ticker
         tickers:
           - AAPL
           - MSFT
-        query_params:
-          - sort: ticker
       custom_bars:
-        - params:
+        - path_params:
             multiplier: 1
             timespan: "second"
             from: "2023-01-05"
             to: "2023-01-09"
+        - query_params:
             adjusted: true
             sort: "asc"
             limit: 50000
