update paginate_records and caching

--- a/meltano.yml
+++ b/meltano.yml
@@ -73,6 +73,9 @@ plugins:
         tickers:
           - AAPL
           - MSFT
+      ticker_details:
+        query_params:
+          date: "2025-01-07"
       custom_bars:
         - path_params:
             multiplier: 1
