--- a/meltano.yml
+++ b/meltano.yml
@@ -112,7 +112,7 @@ plugins:
         - query_params:
             sort: timestamp
             order: asc
-            timestamp.gte: "2025-05-21T19:59:00Z"
+            timestamp.gte: "2025-05-23T20:59:00Z"
       quotes:
         - query_params:
             timestamp.gte: "2025-05-21T12:59:00Z"
@@ -166,18 +166,22 @@ plugins:
         - query_params:
             ex_dividend_date.gte: "2025-05-01"
             order: asc
+            limit: 1000
       financials:
         - query_params:
             filing_date.gte: "2025-05-01"
             order: asc
+            limit: 100
       short_interest:
         - query_params:
             settlement_date.gte: "2025-03-01"
             settlement_date.lt: "2025-03-15"
+            limit: 10000
       short_volume:
         - query_params:
             date.gte: "2025-05-20"
             order: asc
+            limit: 10000
       news:
         - query_params:
             published_utc.gte: "2025-05-21"
@@ -189,10 +193,10 @@ plugins:
         replication-key: timestamp
       trades:
         replication-method: INCREMENTAL
-        replication-key: replication_key
+        replication-key: sip_timestamp
       quotes:
         replication-method: INCREMENTAL
-        replication-key: replication_key
+        replication-key: sip_timestamp
 
 
   loaders:
