--- a/meltano.yml
+++ b/meltano.yml
@@ -85,7 +85,7 @@ plugins:
             multiplier: 1
             timespan: "second"
             from: "2023-01-06"
-            to: "2023-01-12"
+            to: "2023-01-09"
         - query_params:
             adjusted: true
             sort: "asc"
@@ -113,18 +113,18 @@ plugins:
         - query_params:
             sort: timestamp
             order: asc
-            timestamp.gte: "2025-05-23T20:59:00Z"
+            timestamp.gte: "2025-05-22T20:59:00Z"
+            timestamp.lte: "2025-05-23T23:59:00Z"
       quotes:
         - query_params:
-            timestamp.gte: "2025-05-21T12:59:00Z"
+            timestamp.gte: "2025-05-20T23:59:00Z"
+            timestamp.lte: "2025-05-21T00:59:00Z"
             sort: timestamp
             order: asc
-            tickers:
-              - AAPL
-              - META
       sma:
         - query_params:
             timestamp.gte: "2025-05-20T00:00:00.999Z"
+            timestamp.lte: "2025-05-21T00:00:00.999Z"
             order: asc
             timespan: hour
             window: 10
@@ -133,6 +133,7 @@ plugins:
       ema:
         - query_params:
             timestamp.gte: "2025-05-20T00:00:00.999Z"
+            timestamp.lte: "2025-05-21T00:00:00.999Z"
             order: asc
             timespan: hour
             window: 10
@@ -141,6 +142,7 @@ plugins:
       macd:
         - query_params:
             timestamp.gte: "2025-05-20T00:00:00.999Z"
+            timestamp.lte: "2025-05-21T00:00:00.999Z"
             order: asc
             timespan: hour
             short_window: 12
@@ -151,6 +153,7 @@ plugins:
       rsi:
         - query_params:
             timestamp.gte: "2025-05-20T00:00:00.999Z"
+            timestamp.lte: "2025-05-21T00:00:00.999Z"
             order: asc
             timespan: hour
             window: 18
@@ -158,19 +161,25 @@ plugins:
             expand_underlying: true
       ipos:
         - query_params:
-            listing_date.gte: "2025-05-15"
+            listing_date.gte: "2025-05-01"
+            listing_date.lte: "2025-05-30"
       splits:
         - query_params:
-            execution_date.gte: "2025-03-01"
+            execution_date.gte: "2025-01-01"
+            execution_date.lte: "2025-05-30"
             order: asc
+        - other_params:
+            use_cached_tickers: true
       dividends:
         - query_params:
-            ex_dividend_date.gte: "2025-05-01"
+            ex_dividend_date.gte: "2020-05-01"
+            ex_dividend_date.lte: "2020-05-30"
             order: asc
             limit: 1000
       financials:
         - query_params:
             filing_date.gte: "2025-05-01"
+            filing_date.lte: "2025-05-30"
             order: asc
             limit: 100
       short_interest:
@@ -181,24 +190,14 @@ plugins:
       short_volume:
         - query_params:
             date.gte: "2025-05-20"
+            date.lte: "2025-05-30"
             order: asc
             limit: 10000
       news:
         - query_params:
             published_utc.gte: "2025-05-21"
+            published_utc.lte: "2025-05-23"
             order: asc
-
-    metadata:
-      custom_bars:
-        replication-method: INCREMENTAL
-        replication-key: timestamp
-      trades:
-        replication-method: INCREMENTAL
-        replication-key: sip_timestamp
-      quotes:
-        replication-method: INCREMENTAL
-        replication-key: sip_timestamp
-
 
   loaders:
   - name: target-jsonl
