rename bars stream

--- a/meltano.yml
+++ b/meltano.yml
@@ -37,15 +37,15 @@ plugins:
       - ticker_details.*
       - ticker_types.*
       - related_companies.*
-      - custom_bars_1_second.*
-      - custom_bars_30_second.*
-      - custom_bars_1_minute.*
-      - custom_bars_5_minute.*
-      - custom_bars_30_minute.*
-      - custom_bars_1_hour.*
-      - custom_bars_1_day.*
-      - custom_bars_1_week.*
-      - custom_bars_1_month.*
+      - bars_1_second.*
+      - bars_30_second.*
+      - bars_1_minute.*
+      - bars_5_minute.*
+      - bars_30_minute.*
+      - bars_1_hour.*
+      - bars_1_day.*
+      - bars_1_week.*
+      - bars_1_month.*
       - daily_market_summary.*
       - daily_ticker_summary.*
       - previous_day_bar.*
@@ -92,7 +92,7 @@ plugins:
         other_params:
           loop_over_dates_gte_date: true
 
-      custom_bars_1_second:
+      bars_1_second:
         path_params:
           multiplier: 1
           timespan: "second"
@@ -103,7 +103,7 @@ plugins:
           sort: "asc"
           limit: 5000
 
-      custom_bars_30_second:
+      bars_30_second:
         path_params:
           multiplier: 30
           timespan: "second"
@@ -114,7 +114,7 @@ plugins:
           sort: "asc"
           limit: 5000
 
-      custom_bars_1_minute:
+      bars_1_minute:
         path_params:
           multiplier: 1
           timespan: "minute"
@@ -125,7 +125,7 @@ plugins:
           sort: "asc"
           limit: 5000
 
-      custom_bars_5_minute:
+      bars_5_minute:
         path_params:
           multiplier: 5
           timespan: "minute"
@@ -136,7 +136,7 @@ plugins:
           sort: "asc"
           limit: 5000
 
-      custom_bars_30_minute:
+      bars_30_minute:
         path_params:
           multiplier: 30
           timespan: "minute"
@@ -147,7 +147,7 @@ plugins:
           sort: "asc"
           limit: 5000
 
-      custom_bars_1_hour:
+      bars_1_hour:
         path_params:
           multiplier: 1
           timespan: "hour"
@@ -158,7 +158,7 @@ plugins:
           sort: "asc"
           limit: 5000
 
-      custom_bars_1_day:
+      bars_1_day:
         path_params:
           multiplier: 1
           timespan: "day"
@@ -169,7 +169,7 @@ plugins:
           sort: "asc"
           limit: 5000
 
-      custom_bars_1_week:
+      bars_1_week:
         path_params:
           multiplier: 1
           timespan: "week"
@@ -180,7 +180,7 @@ plugins:
           sort: "asc"
           limit: 5000
 
-      custom_bars_1_month:
+      bars_1_month:
         path_params:
           multiplier: 1
           timespan: "month"
