--- a/meltano.yml
+++ b/meltano.yml
@@ -52,10 +52,10 @@ plugins:
       - top_market_movers.*
       - stock_trades.*
       - stock_quotes.*
-      - stock_sma.*
-      - stock_ema.*
-      - stock_macd.*
-      - stock_rsi.*
+      - sma.*
+      - ema.*
+      - macd.*
+      - rsi.*
       - exchanges.*
       - market_holidays.*
       - market_status.*
@@ -215,7 +215,8 @@ plugins:
         query_params:
           sort: timestamp
           order: "asc"
-          timestamp__gte: "2015-06-01"
+          timestamp__gte: "2025-05-20T22:59:00Z"
+          timestamp__lte: "2025-05-20T23:59:00Z"
           limit: 50000
       stock_quotes:
         query_params:
@@ -223,7 +224,7 @@ plugins:
           timestamp__lte: "2025-05-21T00:59:00Z"
           sort: timestamp
           order: asc
-      stock_sma:
+      sma:
         query_params:
           timestamp__gte: "2025-01-01T00:00:00.999Z"
           timestamp__lte: "2025-01-30T01:00:00.999Z"
@@ -232,7 +233,7 @@ plugins:
           window: 10
           series_type: close
           expand_underlying: true
-      stock_ema:
+      ema:
         query_params:
           timestamp__gte: "2025-01-01T00:00:00.999Z"
           timestamp__lte: "2025-01-30T01:00:00.999Z"
@@ -241,7 +242,7 @@ plugins:
           window: 10
           series_type: close
           expand_underlying: true
-      stock_macd:
+      macd:
         query_params:
           timestamp__gte: "2025-01-01T00:00:00.999Z"
           timestamp__lte: "2025-01-30T01:00:00.999Z"
@@ -252,7 +253,7 @@ plugins:
           signal_window: 9
           series_type: close
           expand_underlying: true
-      stock_rsi:
+      rsi:
         query_params:
           timestamp__gte: "2015-06-01"
           order: "asc"
@@ -263,11 +264,11 @@ plugins:
           limit: 5000
       ipos:
         query_params:
-          listing_date__gte: "2008-12-10"
+          listing_date__gte: "2018-12-10"
           listing_date__lte: "2025-05-30"
       splits:
         query_params:
-          execution_date__gte: "2000-08-21"
+          execution_date__gte: "2023-08-21"
           limit: 1000
           order: asc
       dividends:
@@ -278,8 +279,8 @@ plugins:
           limit: 1000
       financials:
         query_params:
-          filing_date__gte: "1970-01-01"
-          filing_date__lte: "2025-03-01"
+          filing_date__gte: "2025-01-01"
+          filing_date__lte: "2025-06-01"
           order: asc
           include_sources: true
           limit: 100
